// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Traverser - Parameters returns reference for a single parameter 1`] = `
Array [
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "stop": Object {
      "column": 12,
      "line": 1,
    },
    "text": "param",
  },
]
`;

exports[`Reference Traverser - Parameters returns reference for multiple parameters 1`] = `
Array [
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 23,
      "line": 1,
    },
    "stop": Object {
      "column": 27,
      "line": 1,
    },
    "text": "param",
  },
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 42,
      "line": 1,
    },
    "stop": Object {
      "column": 46,
      "line": 1,
    },
    "text": "param",
  },
]
`;

exports[`Reference Traverser - Parameters returns references for multiple queries 1`] = `
Array [
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 23,
      "line": 1,
    },
    "stop": Object {
      "column": 27,
      "line": 1,
    },
    "text": "param",
  },
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 42,
      "line": 1,
    },
    "stop": Object {
      "column": 46,
      "line": 1,
    },
    "text": "param",
  },
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 83,
      "line": 2,
    },
    "stop": Object {
      "column": 87,
      "line": 2,
    },
    "text": "param",
  },
  Object {
    "rule": "ParameterNameContext",
    "start": Object {
      "column": 102,
      "line": 2,
    },
    "stop": Object {
      "column": 106,
      "line": 2,
    },
    "text": "param",
  },
]
`;
